--- a/style.css
+++ b/style.css
@@ -3651,6 +3651,171 @@ ARTICLE LIST
 	margin-bottom: 40px;
 }
 
-.pioneer 
+.pioneer-home .intro h2 {
+	margin-bottom: 40px;
+	text-align: left;
+}
 
+.pioneer-home > .flex-1-of-2 {
+	flex-basis: 48%;
+}
+
+@media screen and (max-width: 920px) {
+	.pioneer-home > .flex-1-of-2,
+	.pioneer-home .flex-1-of-2 {
+		flex-basis: initial;
+	}
+
+}
+
+
+/*
+-----------------------------------
+HOMEPAGE
+-----------------------------------
+*/
+
+/* BEGIN CAT HERO */
+
+.cat-hero {
+  width: 100%;
+  font-size: 0;
+  margin-bottom: 20px;
+}
+
+.cat-hero-header {
+  font-size: 18px;
+  /*margin: 36px;*/
+  margin-bottom: 0px;
+  border-bottom: 1px solid #e4e4e4;
+  padding-bottom: 3px;
+  flex-basis: 100%;
+}
+
+.cat-hero-header h2 {
+  /*font-weight: 800; */
+  display: inline;
+}
+
+.cat-hero-header h3 {
+  float: right;
+  margin-top: 9px;
+  /*text-transform: uppercase;*/
+  /*font-size: 1em;*/
+      margin-bottom: 0px;
+
+}
+
+.cat-hero-header h3 a {
+  /*text-decoration: underline;*/
+  /*color: black;*/
+  border-bottom-width: 0;
+}
+
+.cat-hero-header h3 a:hover {
+  /*color: #028fc5;*/
+  border-bottom-width: 3px; 
+}
+
+.cat-hero-left-container, 
+.cat-hero-right-container {
+  /*display: inline-block;*/
+  /*vertical-align: top;*/
+	padding-top: 20px;
+
+}
+
+/* Containers set width...*/
+.cat-hero-left-container {
+  /*width: 60%;*/
+  flex-basis: 65%;
+}
+
+.cat-hero-right-container {
+  /*width: 39.8%;*/ /* to account for 1px border below */
+  border-left: 1px solid #e4e4e4;
+  flex-basis: 32.5%;
+      padding-left: 20px;
+}
+
+/* ...and their child divs set padding.
+* This is a common setup throughout the site. */
+.cat-hero-left,
+.cat-hero-right {
+  /*padding: 24px 36px 36px 36px;*/
+  width: 100%;
+}
+
+.cat-hero-left ul,
+.cat-hero-right ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.cat-hero-item {
+  font-size: 18px; /* to reset after font-size: 0 */
+}
+
+.cat-hero-left .cat-hero-item {
+  width: 50%; /* Since there are two articles side-by-side */
+  display: inline-block;
+  vertical-align: top;
+}
+
+.cat-hero-left li:first-child .cat-hero-item-content {
+  padding-right: 18px;
+}
+
+.cat-hero-left li:nth-child(2) .cat-hero-item-content {
+  padding-left: 18px;
+}
+
+.cat-hero-left .cat-hero-item-image {
+  width: 100%;
+  min-height: 200px;
+  margin-bottom: 18px;
+  border: 1px solid #e4e4e4;
+}
+
+/* We use the images at lower screen sizes, this is just hiding them for desktop. See cat-hero.php for more details */
+.cat-hero-right .cat-hero-item-image {
+  display: none;
+}
+
+.cat-hero-left .cat-hero-article-title,
+.cat-hero-left .cat-hero-article-excerpt {
+  margin-bottom: 9px;
+}
+
+.cat-hero-right .cat-hero-article-title,
+.cat-hero-right .cat-hero-article-excerpt {
+  margin-bottom: 3px;
+}
+
+.cat-hero-article-date-author {
+  /*font-family: 'Gotham', Calibri, Arial, sans-serif;*/
+  font-weight: 300;
+  /*text-transform: uppercase;*/
+  font-size: 75%;
+}
+
+.cat-hero-article-title a {
+  /*text-transform: uppercase;*/
+  font-size: 1.116em;
+  color: #231F20;
+  font-weight: 700;
+  /*font-family: 'Gotham', Calibri, Arial, sans-serif;*/
+  line-height: 100%;
+}
+
+.cat-hero-right li:nth-child(1),
+.cat-hero-right li:nth-child(2) {
+  display: none;
+}
+
+.cat-hero-right .cat-hero-item {
+  margin-bottom: 27px;
+}
+
+/* END CAT HERO */
 
