fixed https scripting issue and created pioneer footer

--- a/style.css
+++ b/style.css
@@ -3817,5 +3817,126 @@ HOMEPAGE
   margin-bottom: 27px;
 }
 
+@media screen and (max-width: 1060px) {
+	/* BEGIN CAT HERO */
+
+  .cat-hero-header {
+    text-align: center;
+  }
+
+  .cat-hero-header h3 {
+    display: block;
+  }
+
+  .cat-hero-header h4 {
+    float: none;
+    margin-top: 5px;
+    margin-bottom: 3px;
+  }
+
+  /* Show all images for cat-hero-right */
+  .cat-hero-right .cat-hero-item-image {
+    display: inline-block;
+    height: 200px;
+    width: 50%;
+    border: 1px solid #e4e4e4;
+  }
+
+  /* Stop showing all of left since we'll be displaying all of the articles from right from now on */
+  .cat-hero-left-container {
+    display: none;
+  }
+
+  .cat-hero-right-container {
+    width: 100%;
+    flex-basis: 100%;
+    border: none;
+    padding-left: 0;
+  }
+
+  /* Show all of the articles from right, even the previously hidden 1 and 2 */
+  .cat-hero-right li:nth-child(1),
+  .cat-hero-right li:nth-child(2),
+  .cat-hero-right .cat-hero-item {
+    display: block;
+    font-size: 0;
+  }
+
+  .cat-hero-right .cat-hero-item-content {
+    width: 49.6%; /* accounts for border  on image */
+    display: inline-block;
+    vertical-align: top;
+    font-size: 18px;
+  }
+
+  .cat-hero-article-title, 
+  .cat-hero-article-excerpt,
+  .cat-hero-article-date-author {
+    padding-left: 36px;
+  }
+
+  /* END CAT HERO */
+}
+
+@media screen and (max-width: 768px) {
+	/* BEGIN CAT HERO */
+
+  .cat-hero-left,
+  .cat-hero-right {
+    padding: 9px 0;
+  }
+
+  .cat-hero-header {
+    margin: 18px 0;
+    margin-bottom: 9px;
+  }
+
+  .cat-hero-right .cat-hero-item {
+    margin-bottom: 36px;
+  }
+
+  .cat-hero-right .cat-hero-item-image {
+    width: 35%;
+    height: 130px;
+  }
+
+  .cat-hero-right .cat-hero-item-content {
+    width: 64%;
+  }
+
+  .cat-hero-article-title, 
+  .cat-hero-article-excerpt,
+  .cat-hero-article-date-author {
+    padding-left: 18px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+	/* BEGIN CAT HERO */
+  .cat-hero-right .cat-hero-item-content,
+  .cat-hero-right .cat-hero-item-image {
+    display: block;
+    width: 99%;
+    margin: 0 auto;
+  }
+
+  .cat-hero-right .cat-hero-item-image {
+    height: 175px;
+    margin-bottom: 9px;
+  }
+
+  .cat-hero-article-title, 
+  .cat-hero-article-excerpt,
+  .cat-hero-article-date-author {
+    padding-left: 0;
+  }
+
+  /* END CAT HERO */
+  /* BEGIN FULL WIDTH SUBSCRIBE */
+
+  .full-width-subscribe input.email {
+    width: 250px;
+  }
+}
 /* END CAT HERO */
 
