--- a/style.css
+++ b/style.css
@@ -3273,6 +3273,173 @@ LAUNCH SINGLE PARTNERS
 	}
 }
 
+
+/* 
+------------------------------------
+TRIPS OVERVIEW HERO
+-----------------------------------
+*/
+
+
+.trip-hero .image-bg {
+	background-position: top;
+	height: 650px;
+}
+
+.trip-hero .intro {
+	max-width: 800px;
+	text-align: left;
+	margin-top: 20px;
+}
+
+.trip-hero .intro h1 {
+	text-align: left;
+}
+
+/* 
+------------------------------------
+NEXT TRIP
+-----------------------------------
+*/
+
+.next-trip .flex {
+	align-items: center;
+}
+
+.next-trip h2 {
+	margin-bottom: 10px;
+
+}
+
+.next-trip h3 {
+	font-weight: normal;
+	font-style: italic;
+}
+
+@media screen and (max-width: 768px) {
+	.next-trip .flex-1-of-2 {
+		text-align: center;
+		width: 100%;
+		margin: 10px 0;
+	}
+
+	.next-trip .flex-1-of-2 .button {
+		margin-right: 0;
+	}
+}
+
+/* 
+------------------------------------
+TRIP TESTIMONIAL
+-----------------------------------
+*/
+
+.trip-testimonial .flex {
+	align-items: center;
+	color: white;
+}
+
+
+/* 
+------------------------------------
+HOW TRIPS WORK
+-----------------------------------
+*/
+
+.how-trips-work .flex-1-of-2 {
+	margin-bottom: 2em;
+}
+
+.how-trips-work .video {
+	align-items: center;
+}
+
+/* 
+------------------------------------
+COMPANIES + ALUMNI
+-----------------------------------
+*/
+
+.companies-and-alumni p,
+.companies-and-alumni a {
+	text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+
+	.companies-and-alumni p,
+	.companies-and-alumni a {
+		text-align: left;
+	}
+
+}
+
+/* 
+------------------------------------
+TRIP SPONSORS
+-----------------------------------
+*/
+
+@media screen and (max-width: 768px) {
+
+	.trip-sponsors .flex-1-of-2 .flex-1-of-2 {
+		flex-basis: 45%;
+		margin-bottom: 40px;
+	}
+
+}
+
+/* 
+------------------------------------
+ALL TRIPS
+-----------------------------------
+*/
+
+.all-trips .flex-1-of-2 {
+	background-size: cover;
+	position: relative;
+	color: white;
+	text-align: center;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	padding: 50px 30px;
+}
+
+.all-trips .info {
+	position: relative;
+	z-index: 2;
+}
+
+.all-trips h3 {
+	margin-bottom: 0px;
+}
+
+.all-trips p {
+	margin-top: 5px;
+	font-style: italic;
+}
+
+.all-trips .button {
+	background-color: white;
+	color: #0a2128;
+	margin-right: 0;
+}
+
+.all-trips .button:after {
+	border-color: #53b0ca;
+}
+
+
+@media screen and (max-width: 768px) {
+
+	.all-trips .flex-1-of-2 {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+
+}
+
+
 /*
 -----------------------------------
 SHARE THIS PAGE 
@@ -3668,10 +3835,22 @@ ARTICLE LIST
 
 }
 
+/*
+-----------------------------------
+PIONEER ARCHIVE
+-----------------------------------
+*/
+
+.pioneer-archive .previous-next {
+	text-align: center;
+	width: 100%;
+	margin-top: 40px;
+}
+
 
 /*
 -----------------------------------
-HOMEPAGE
+PIONEER CAT HERO
 -----------------------------------
 */
 
