--- a/style.css
+++ b/style.css
@@ -3275,6 +3275,31 @@ LAUNCH SINGLE PARTNERS
 
 /* 
 ------------------------------------
+FOOTER PARTNERS
+-----------------------------------
+*/
+
+footer .partner img {
+	filter: brightness(0) invert(1);
+	width: 150px;
+	height: auto;
+	margin-bottom: 20px;
+}
+
+@media screen and (max-width: 920px) {
+	footer .right {
+		margin-top: 40px;
+	}
+
+	footer .partner {
+		display: inline;
+		margin-right: 40px;
+	}
+}
+
+
+/* 
+------------------------------------
 TRIP PAGE (SHOULD BE SPLIT UP)
 -----------------------------------
 */
@@ -3300,21 +3325,47 @@ TRIP PAGE (SHOULD BE SPLIT UP)
 	text-align: center;
 	padding-bottom: 10px;
 	padding-top: 20px;
-	border-bottom: 1px solid #0a2128;
+	padding-left: 20px;
+	padding-right: 20px;
+	border: 2px solid #0a2128;
+	background-color: white;
+	margin-top: 20px;
 }
 
 .trip-tracks .track-heading .view-more {
 	font-style: italic;
 	text-decoration: underline;
 	font-size: 24px;
+	margin-bottom: 8px;
 }
 
 .trip-tracks .track-heading .view-more:hover {
 	cursor: pointer;
 }
 
+.trip-tracks .list-info p {
+	font-weight: 400;
+}
 
+.trip-tracks .track-heading h2 {
+	margin-bottom: 10px;
+}
 
+.trip-tracks .track-contents {
+	display: none;
+}
+
+@media screen and (max-width: 768px) {
+	.trip-tracks .track-contents figure {
+		width: 300px;
+		height: auto;
+	}
+
+	.trip-tracks .track-heading {
+		text-align: left;
+	}
+
+}
 
 
 /* 
