added in about pioneer teaser

--- a/style.css
+++ b/style.css
@@ -3935,6 +3935,9 @@ PIONEER HOME HERO
 -----------------------------------
 */
 
+.about-pioneer-teaser {
+	text-align: center;
+}
 
 .pioneer-home .pioneer-intro {
 	position: relative;
