--- a/plated/css/main.css
+++ b/plated/css/main.css
@@ -353,16 +353,20 @@ header p.by {
 
 @media screen and (max-width: 740px) {
 
-    header h1 {
-        font-size: 1.5em;
+    header {
+        position: relative;
     }
 
     .data-science {
-        padding-top: 150px;
+        padding-top: 0;
+    }
+
+    header h1 {
+        font-size: 1.75em;
     }
 
     header .logo img {
-        width: 45px;
+        width: 55px;
         height: auto;
     }
 
@@ -376,8 +380,6 @@ header p.by {
 
 @media screen and (max-width: 660px) {
 
-    .data-science {
-        padding-top: 200px;
-    }
+
 
 }
