fixed co-author support on the pioneer, added in legacy support for old pioneer author data, and fixed pioneer about to only show active team members

--- a/style.css
+++ b/style.css
@@ -4666,6 +4666,11 @@ AUTHOR PAGE
 	width: 100%;
 }
 
+.next-previous {
+    margin: 18px 0;
+    text-align: center;
+}
+
 /*
 -----------------------------------
 SEARCH PAGES 
