--- a/style.css
+++ b/style.css
@@ -3427,6 +3427,14 @@ TRIPS OVERVIEW HERO
 	text-align: left;
 }
 
+.trip-presenting-partners .flex-1-of-3,
+.trip-presenting-partners .flex-2-of-3 {
+	margin-bottom: 30px;
+
+}
+
+
+
 /* 
 ------------------------------------
 NEXT TRIP
